[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Title.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Main.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Balls/Ball.png" type="Texture" id=4]
[ext_resource path="res://Assets/Balls/Skippy.png" type="Texture" id=5]
[ext_resource path="res://Assets/Balls/Sticky.png" type="Texture" id=6]
[ext_resource path="res://Assets/Balls/Randy.png" type="Texture" id=7]
[ext_resource path="res://Assets/Hole.png" type="Texture" id=8]
[ext_resource path="res://Assets/Balls/Bouncy.png" type="Texture" id=9]
[ext_resource path="res://Assets/Balls/Jumpy.png" type="Texture" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 640.0
color = Color( 0, 0.4, 0, 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 417.0
margin_top = 283.0
margin_right = 516.0
margin_bottom = 427.0
theme = ExtResource( 3 )

[node name="Continue" type="Button" parent="MainMenu"]
margin_right = 99.0
margin_bottom = 14.0
text = "Continue"

[node name="Reset" type="Button" parent="MainMenu"]
margin_top = 18.0
margin_right = 99.0
margin_bottom = 32.0
text = "Reset"

[node name="Confirmation" type="ConfirmationDialog" parent="."]
margin_left = 300.0
margin_top = 355.0
margin_right = 642.0
margin_bottom = 425.0
theme = ExtResource( 3 )
dialog_text = "Are you certain you would like to reset all progess?"

[node name="Title" type="Sprite" parent="."]
position = Vector2( 472, 184 )
texture = ExtResource( 1 )

[node name="Hole" type="Sprite" parent="."]
position = Vector2( 347, 210 )
texture = ExtResource( 8 )

[node name="Hole2" type="Sprite" parent="."]
position = Vector2( 617, 152 )
texture = ExtResource( 8 )

[node name="Ball" type="Sprite" parent="."]
position = Vector2( 624, 151 )
texture = ExtResource( 4 )

[node name="Bouncy" type="Sprite" parent="."]
position = Vector2( 422, 131 )
texture = ExtResource( 9 )

[node name="Jumpy" type="Sprite" parent="."]
position = Vector2( 536, 203 )
texture = ExtResource( 10 )

[node name="Randy" type="Sprite" parent="."]
position = Vector2( 691, 514 )
texture = ExtResource( 7 )

[node name="Skippy" type="Sprite" parent="."]
position = Vector2( 433, 213 )
texture = ExtResource( 5 )

[node name="Sticky" type="Sprite" parent="."]
position = Vector2( 357, 182 )
texture = ExtResource( 6 )

[connection signal="pressed" from="MainMenu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenu/Reset" to="." method="_on_Reset_pressed"]
[connection signal="confirmed" from="Confirmation" to="." method="_on_Confirmation_confirmed"]
